--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
 greenlet==1.1.2
+gunicorn== 19.9.0
 idna==3.3
 importlib-metadata==4.8.2
 importlib-resources==5.4.0
