--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,15 @@ alembic==1.7.5
 certifi==2021.10.8
 charset-normalizer==2.0.7
 click==8.0.1
+distlib==0.3.4
+filelock==3.4.2
 Flask==2.0.1
 Flask-Login==0.5.0
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
 greenlet==1.1.2
-gunicorn== 19.9.0
+gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.8.2
 importlib-resources==5.4.0
@@ -18,9 +20,14 @@ Mako==1.1.6
 MarkupSafe==2.0.1
 numpy==1.21.4
 Pillow==8.4.0
+pipenv==2022.1.8
+platformdirs==2.4.1
 requests==2.26.0
+six==1.16.0
 SQLAlchemy==1.4.25
 urllib3==1.26.7
+virtualenv==20.13.1
+virtualenv-clone==0.5.7
 Werkzeug==2.0.1
 WTForms==2.3.3
 zipp==3.6.0
