--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,35 @@
-alembic==1.2.1
-asn1crypto==0.24.0
-astroid==1.6.6
-backports.functools-lru-cache==1.5
-certifi==2019.9.11
-cffi==1.12.3
-chardet==3.0.4
-Click==7.0
-configparser==4.0.2
-cryptography==2.7
-enum34==1.1.6
-Flask==1.1.1
-Flask-Migrate==2.5.2
+alembic==1.7.5
+certifi==2021.10.8
+charset-normalizer==2.0.7
+click==8.0.1
+distlib==0.3.4
+filelock==3.4.2
+Flask==2.0.1
+Flask-Login==0.5.0
+Flask-Migrate==2.6.0
 Flask-Script==2.0.6
-Flask-SQLAlchemy==2.4.1
-futures==3.3.0
-idna==2.8
-ipaddress==1.0.22
-isort==4.3.21
-itsdangerous==1.1.0
-Jinja2==2.10.1
-lazy-object-proxy==1.4.2
-Mako==1.1.0
-MarkupSafe==1.1.1
-mccabe==0.6.1
-pipenv==2018.11.26
-PyAudio==0.2.11
-pycparser==2.19
-PyJWT==1.7.1
-pylint==1.9.5
-pyOpenSSL==19.0.0
-python-dateutil==2.8.0
-python-editor==1.0.4
-pytz==2019.2
-requests==2.22.0
-singledispatch==3.4.0.3
-six==1.12.0
-spotipy==2.16.0
-SQLAlchemy==1.3.8
-twilio==6.31.0
-typing==3.7.4.1
-urllib3==1.25.3
-virtualenv==16.7.5
-virtualenv-clone==0.5.3
-Werkzeug==0.15.6
-wrapt==1.11.2
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.15.1
+greenlet==1.1.2
+gunicorn==20.1.0
+idna==3.3
+importlib-metadata==4.8.2
+importlib-resources==5.4.0
+itsdangerous==2.0.1
+Jinja2==3.0.1
+Mako==1.1.6
+MarkupSafe==2.0.1
+numpy==1.22.3
+Pillow==8.4.0
+pipenv==2022.1.8
+platformdirs==2.4.1
+psycopg2-binary==2.9.3
+requests==2.26.0
+six==1.16.0
+SQLAlchemy==1.4.25
+urllib3==1.26.7
+virtualenv==20.13.1
+virtualenv-clone==0.5.7
+Werkzeug==2.0.1
+WTForms==2.3.3
+zipp==3.6.0
