Move manage.py for  heroku

--- a/app/.envrc
+++ b/app/.envrc
@@ -1,3 +1,3 @@
 # export DATABASE_URL=$(heroku config:get DATABASE_URL -a heart-beats-capstone)
 # export DATABASE_URL="postgresql:///heart-beats-capstone"
-export DATABASE_URL="postgres://postgresql:092399@localhost:5432/heartbeats"
+export DATABASE_URL="postgres://jocelyn:092399@localhost:5432/heartbeats"
