--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ filelock==3.4.2
 Flask==2.0.1
 Flask-Login==0.5.0
 Flask-Migrate==2.6.0
-Flask-Script==2.0.6
+# Flask-Script==2.0.6
+flask-script==2.0.5
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
 greenlet==1.1.2
